# fastapi-template

./: .flake8  Dockerfile  Pipfile  README.md  alembic.ini  api.sh  docker-compose.yml  fastapi.env  mypy.ini  pre-commit.sh  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci.yml  docker_clean.yml  merge-me.yml
alembic/: env.py  script.py.mako
alembic/versions/: 2022_08_30_2304-4dc40d8f2443_create_user_table.py  2022_08_30_2306-04bd76b11ff1_create_session_table.py  2022_08_30_2307-57f71c43ee3a_create_oauth_user_connection_table.py
api/: app.py  auth.py  database.py  environment.py  logger.py  main.py  redis.py  settings.py  utils.py  version.py
api/database/: __init__.py  database.py
api/endpoints/: __init__.py  oauth.py  recaptcha.py  session.py  test.py  user.py
api/endpoints/internal/: __init__.py  test.py
api/exceptions/: __init__.py  api_exception.py  auth.py  oauth.py  session.py  user.py
api/models/: __init__.py  oauth_user_connection.py  session.py  user.py
api/schemas/: __init__.py  oauth.py  session.py  sessions.py  test.py  user.py
api/services/: internal.py
api/utils/: async_thread.py  debug.py  docs.py  jwt.py  mfa.py  passwords.py  recaptcha.py
tests/: _utils.py  conftest.py  fixtures.py  test_app.py  test_auth.py  test_database.py  test_environment.py  test_logger.py  test_main.py  test_redis.py  test_settings.py  test_utils.py  test_version.py  utils.py
tests/endpoints/: test_recaptcha.py  test_test.py  test_user.py
tests/endpoints/internal/: test_test.py
tests/models/: test_oauth_user_connection.py  test_session.py  test_user.py
tests/services/: test_internal.py
tests/utils/: test_async_thread.py  test_debug.py  test_docs.py  test_jwt.py  test_mfa.py  test_passwords.py  test_recaptcha.py
