[tool.poetry]
name = "fastapi-template"
version = "0"
description = ""
authors = ["Defelo <elodef42@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://github.com/Defelo/fastapi-template"
repository = "https://github.com/Defelo/fastapi-template"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
aiohttp = "^3.8.1"
aioredis = "^2.0.1"
SQLAlchemy = "^1.4.32"
aiomysql = "^0.0.22"
asyncpg = "^0.25.0"
sentry-sdk = "^1.5.7"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
bandit = "1.7.2"
black = "^22.1.0"
wemake-python-styleguide = "^0.16.1"
mypy = "^0.940"
SQLAlchemy = { extras = ["mypy"], version = "^1.4.32" }
coverage = "^6.3.2"

[tool.poe.tasks]
api = { script = "api.main:main", envfile = ".env" }
flake8 = "flake8 . --count --statistics --show-source"
black = "black ."
mypy = "mypy ."
lint = ["black", "mypy", "flake8"]
test = "python -m unittest discover -v tests"

[tool.poe.tasks.coverage]
shell = """
coverage run --branch --source=api -m unittest discover -v tests \
&& coverage report \
&& test $html && coverage html && xdg-open htmlcov/index.html; \
test $clean = True && coverage erase || true"""

    [tool.poe.tasks.coverage.args.html]
    options = ["--html"]
    type = "boolean"

    [tool.poe.tasks.coverage.args.clean]
    options = ["--no-clean"]
    type = "boolean"
    default = true

[tool.black]
target-version = ["py310"]
line-length = 120
skip-magic-trailing-comma = true

[tool.mypy]
strict = true
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.coverage.run]
omit = [ "api/__main__.py", "tests/*" ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
